--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,19 @@ jobs:
     # Step 4: Build the project
       - name: Build project
         run: npm run build
+
+     # Step 5: Upload build artifacts (optional)
+      # This is useful if you want to store or use the build in subsequent jobs
+      - name: Upload production build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-build
+          path: dist/
+            # Step 7: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: Cecilapp/GitHub-Pages-deploy@v3
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+              email: username@domain.tld
+              build_dir: dist
